2012-05-25  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/action/body_smart_kick.cpp:
	* rcsc/action/kick_table.cpp:
	* rcsc/action/kick_table.h:
	- スマートキックのパラメータ変更．キッカブルエリア内の候補位置を増
	やした
	- スマートキック探索で，3ステップキックの2ステップ目のみ要求するパ
	ワーのしきい値を厳しめに変更．2ステップ目のキックで目標位置へ到達
	させられず失敗することが多い問題への対応

2012-05-23  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/action/basic_actions.cpp:
	- デバッグメッセージ修正

2012-05-22  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/action/body_go_to_point2010.cpp:
	- 悪影響が出ているようなので，新しいアルゴリズムの使用を一旦停止

	* rcsc/action/body_go_to_point2010.cpp:
	* rcsc/action/body_go_to_point2010.h:
	- 全方位移動ダッシュを再実装し，発見的探索なアルゴリズムに修正．最
	終的には完全なA*への再設計が必要

2012-05-21  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/world_model.cpp:
	- プレイヤ同士の衝突計算でプレイヤタイプのヌルポインタ参照を起こす
	バグを修正．プレイヤの衝突計算はプレイヤタイプ更新後に実行する

	* rcsc/action/body_go_to_point2010.cpp:
	- ベクトルの回転計算をMatrix2Dで置き換え

	* rcsc/player/player_object.cpp:
	- M_seen_velに衝突の影響を反映できていなかったのを修正

	* rcsc/player/player_object.cpp:
	* rcsc/player/player_object.h:
	* rcsc/player/world_model.cpp:
	* rcsc/player/world_model.h:
	- WorldModel::updatePlayersCollision()を追加．他プレイヤとの衝突を
	検出した場合に，衝突したプレイヤの速度情報に衝突の影響を反映する
	- WorldModel::updateCollision()をupdateBallCollision()に変更

2012-05-19  Tomoharu NAKASHIMA  <tomoharu.nakashima@kis.osakafu-u.ac.jp>

	* configure.ac
	- スペルミスを修正

2012-05-18  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/ball_object.cpp:
	* rcsc/player/world_model.cpp:
	- キーパーがボールをキャッチ中はボール速度を強制的に0にするルール
	を追加
	- プレイモードがゴールキックに変わった直後はボール速度を強制的に0
	にするルールを追加

	* rcsc/action/neck_turn_to_ball_and_player.cpp:
	* rcsc/action/neck_turn_to_ball_and_player.h:
	* rcsc/action/neck_turn_to_ball_or_scan.h:
	* rcsc/action/neck_turn_to_low_conf_teammate.cpp:
	* rcsc/action/neck_turn_to_player_or_scan.cpp:
	* rcsc/action/neck_turn_to_player_or_scan.h:
	- 首振り動作で対象物体の信頼性カウントしきい値のデフォルト値を設定
	しないように変更

2012-05-17  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/action/intention_dribble2008.cpp: