@@ -55,57 +55,6 @@ public:
     //! constant error value (= std::numeric_limits< double >::max())
     static const double ERROR_VALUE;
 
-    //! x normalize factor (field length) to limit inputed x
-    static const double X_NORM_FACTOR;
-    //! y normalze factor (field width) to limit inputed y
-    static const double Y_NORM_FACTOR;
-    //! speed normalize factor to limit inputed speed range
-    static const double SPEED_NORM_FACTOR;
-
-    //! used by encodeCoordToStr2/decodeStr2ToCoord
-    static const double COORD_STEP_L2;
-    //! used by encodeSpeedToChar/decodeCharToSpeed
-    static const double SPEED_STEP_L1;
-
-    /*!
-      \enum BitMask
-      \brief bit mask enumeration for convenience
-     */
-    enum BitMask {
-        MASK_1 = 0x00000001,
-        MASK_2 = 0x00000003,
-        MASK_3 = 0x00000007,
-        MASK_4 = 0x0000000F,
-        MASK_5 = 0x0000001F,
-        MASK_6 = 0x0000003F,
-        MASK_7 = 0x0000007F,
-        MASK_8 = 0x000000FF,
-        MASK_9 = 0x000001FF,
-        MASK_10 = 0x000003FF,
-        MASK_11 = 0x000007FF,
-        MASK_12 = 0x00000FFF,
-        MASK_13 = 0x00001FFF,
-        MASK_14 = 0x00003FFF,
-        MASK_15 = 0x00007FFF,
-        MASK_16 = 0x0000FFFF,
-        MASK_17 = 0x0001FFFF,
-        MASK_18 = 0x0003FFFF,
-        MASK_19 = 0x0007FFFF,
-        MASK_20 = 0x000FFFFF,
-        MASK_21 = 0x001FFFFF,
-        MASK_22 = 0x003FFFFF,
-        MASK_23 = 0x007FFFFF,
-        MASK_24 = 0x00FFFFFF,
-        MASK_25 = 0x01FFFFFF,
-        MASK_26 = 0x03FFFFFF,
-        MASK_27 = 0x07FFFFFF,
-        MASK_28 = 0x0FFFFFFF,
-        MASK_29 = 0x1FFFFFFF,
-        MASK_30 = 0x3FFFFFFF,
-        MASK_31 = 0x7FFFFFFF,
-        MASK_32 = 0xFFFFFFFF,
-    };
-
 private:
 
     //! map to cnvert character to integer. key: char, value int
@@ -192,8 +141,7 @@ public:
       \brief get character to interger map object
       \return const reference to the map object
     */
-    const
-    CharToIntCont & charToIntMap() const
+    const CharToIntCont & charToIntMap() const
       {
           return M_char_to_int_map;
       }
@@ -202,8 +150,7 @@ public:
       \brief get integer to character map object
       \return const reference to the map object
     */
-    const
-    IntToCharCont & intToCharMap() const
+    const IntToCharCont & intToCharMap() const
       {
           return M_int_to_char_map;
       }
