@@ -1,5 +1,15 @@
 2012-05-25  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
+	* rcsc/common/audio_codec.cpp:
+	* rcsc/common/audio_codec.h:
+	* rcsc/common/audio_memory.cpp:
+	* rcsc/common/audio_memory.h:
+	* rcsc/common/say_message_parser.cpp:
+	* rcsc/common/say_message_parser.h:
+	* rcsc/player/say_message_builder.cpp:
+	* rcsc/player/say_message_builder.h:
+	- SetplayMessageを追加．未テスト
+
 	* rcsc/action/body_smart_kick.cpp:
 	* rcsc/action/kick_table.cpp:
 	* rcsc/action/kick_table.h:
